# Hospital

./: .gitignore  CMakeLists.txt  Hospital.sln  Hospital.vcxproj  KnownIssues.txt  README.md  department.cpp  department.h  entity.cpp  entity.h  entityGenerator.cpp  entityGenerator.h  hospital.cpp  hospital.h  main.cpp  patient.cpp  patient.h  person.cpp  person.h  surgery_visit.cpp  surgery_visit.h  visit.cpp  visit.h
Hospital/: Department.cpp  Department.h  Staff.h  article.h  consts.h  date.cpp  date.h  department.cpp  department.h  hospital.cpp  hospital.h  patient.cpp  patient.h  research_center.cpp  research_center.h  researcher.cpp  researcher.h  staff.cpp  staff.h  visit.cpp  visit.h
Hospital/ResearchCenter/: article.cpp  article.h  research_center.cpp  research_center.h  researcher.cpp  researcher.h
Hospital/Shared/: date.cpp  date.h  validator.cpp  validator.h  validators.cpp  validators.h
Hospital/Staff/: staff.cpp  staff.h
Hospital/Staff-Members/: Doctor.h  doctor.cpp  doctor.h  nurse.cpp  nurse.h
Hospital/Staff/Type/: doctor.cpp  nurse.cpp
ResearchCenter/: article.cpp  article.h  researcher.cpp  researcher.h
Shared/: Array.h  consts.h  date.cpp  date.h  validators.cpp  validators.h
Staff/: staff.cpp  staff.h
Staff/Type/: doctor.cpp  doctor.h  nurse.cpp  nurse.h  surgent.cpp  surgent.h
